--- a/.codesandbox/Dockerfile
+++ b/.codesandbox/Dockerfile
@@ -1,8 +1,7 @@
 # CodeSandbox supports debian and ubuntu based images
-FROM debian:bullseye
+FROM python:3.11.1
 
 
-RUN apt update && apt install -y python3 python3-pip
 
 
 
