--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,7 +1,23 @@
 {
   // These tasks will run in order when initializing your CodeSandbox project.
-  "setupTasks": [],
+  "setupTasks": ["pip install -r requirements.txt"],
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
-  "tasks": {}
+  "tasks": {
+    "start": {
+      "name": "start",
+      "command": "python main.py",
+      "runAtStart": true,
+      "restartOn": {
+        "files": ["calculate_submission.py"]
+      }
+    },
+    "install-dependencies": {
+      "name": "Installing Dependencies",
+      "command": "pip install -r requirements.txt",
+      "restartOn": {
+        "files": ["requirements.txt"]
+      }
+    }
+  }
 }
