refactor: move \`calculate_submission.py\` code to \`main.py\` for organization purposes

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -7,7 +7,7 @@
       "command": "python main.py",
       "runAtStart": true,
       "restartOn": {
-        "files": ["calculate_submission.py"]
+        "files": ["submission-object.json"]
       }
     },
     "install-dependencies": {
